--- a/frontend-challenge/src/App.css
+++ b/frontend-challenge/src/App.css
@@ -1,21 +1,34 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.main-container {
+  height: fit-content;
+  max-width: 35vw;
+  min-width: 335px;
+  width: 35vw;
+  margin-top: 42px;
   text-align: center;
 }
 
-@keyframes spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main-content_container {
+  position: relative;
+  height: max-content;
+  border-radius: 5px;
+  box-shadow: 1px 23px 55px -22px var(--light-dark-grayish-blue);
+  margin-bottom: 100px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+.footer {
+  font-size: 14px;
+  color: var(--light-grayish-blue);
+  margin-bottom: 100px;
+}
+
+@media screen and (max-width: 376px) {
+  .main-container {
+    padding: 45px 20px 0;
+    margin-top: 0;
+    font-size: 13px;
+  }
+
+  .footer {
+    margin-bottom: 80px;
   }
 }
