refactor: fix style

--- a/frontend-challenge/src/index.css
+++ b/frontend-challenge/src/index.css
@@ -32,9 +32,19 @@
   --dark-very-dark-grayish-blue-2: hsl(237, 14%, 26%);
 }
 
+html {
+  height: fit-content;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+}
+
 body {
+  width: 100%;
   max-width: 1440px;
-  min-height: 100vh;
+  min-height: fit-content;
   display: flex;
   justify-content: center;
   background: var(--light-very-light-gray) url(./assets/images/bg-desktop-light.jpg) no-repeat top center;
@@ -42,14 +52,14 @@ body {
   font-weight: 400;
   font-family: "Josefin Sans", sans-serif;
   font-optical-sizing: auto;
-  font-style: normal;
-  box-sizing: border-box;
+  margin: 0 auto;
+  padding: 0;
 }
 
 button {
   background: none;
   border: none;
-  color: var(--light-grayish-blue);
+  color: var(--light-dark-grayish-blue);
   font-weight: 700;
   cursor: pointer;
 }
