--- a/frontend-challenge/src/App.css
+++ b/frontend-challenge/src/App.css
@@ -12,12 +12,13 @@
   height: max-content;
   border-radius: 5px;
   box-shadow: 1px 23px 55px -22px var(--light-dark-grayish-blue);
-  margin-bottom: 100px;
+  margin-bottom: 55px;
 }
 
 .footer {
   font-size: 14px;
-  color: var(--light-grayish-blue);
+  font-weight: 700;
+  color: var(--light-dark-grayish-blue);
   margin-bottom: 100px;
 }
 
@@ -26,6 +27,10 @@
     padding: 45px 20px 0;
     margin-top: 0;
     font-size: 13px;
+  }
+
+  .main-content_container{
+    margin-bottom: 105px;
   }
 
   .footer {
