--- a/frontend-challenge/src/App.css
+++ b/frontend-challenge/src/App.css
@@ -1,8 +1,8 @@
 .main-container {
   height: fit-content;
-  max-width: 35vw;
-  min-width: 335px;
-  width: 35vw;
+  width: 100%;
+  max-width: 535px;
+  min-width: 535px;
   margin-top: 42px;
   text-align: center;
 }
@@ -22,8 +22,16 @@
   margin-bottom: 100px;
 }
 
-@media screen and (max-width: 376px) {
+@media screen and (max-width: 535px) {
   .main-container {
+    min-width: 35vw;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .main-container {
+    min-width: calc(100vw - 40px);
+    width: calc(100vw - 40px);
     padding: 45px 20px 0;
     margin-top: 0;
     font-size: 13px;
