--- a/frontend-challenge/src/styles/Toolbar.css
+++ b/frontend-challenge/src/styles/Toolbar.css
@@ -9,7 +9,7 @@
   color: var(--light-dark-grayish-blue);
   font-size: 14px;
   font-weight: 700;
-  border-radius: 5px;
+  border-radius: 0 0 5px 5px;
 }
 
 .filter-btn_container button.active {
@@ -17,7 +17,7 @@
   font-weight: bold;
 }
 
-@media screen and (max-width: 376px) {
+@media screen and (max-width: 375px) {
   .toolbar-container {
     height: 47px;
     font-size: 12px;
